--- a/Dia 02 a 03 - Portifolio/style.css
+++ b/Dia 02 a 03 - Portifolio/style.css
@@ -78,10 +78,40 @@
 .right-title{
     color:#eeeeee;
 }
-.gap{
-    padding-bottom: 2rem;
-}
+.gap,
 .about-me-contents{
-    font-size: 16px;
+    font-size:18px;
     color:#eeeeee;
+}
+   
+.experience-contents,
+.education-contents,
+.awards-contents{
+    display:grid;
+    grid-template-columns:repeat(2,1fr);
+    padding-bottom:2ren;
+    color:#F1F8FD;
+}
+.exp-company-name,
+.education-school-name,
+.awards-company-name{
+    font-size:25px;
+    font-weight:bold;
+}
+.exp-time-period,
+.educationp-time-period,
+
+awards-time-period{
+    font-size:18px;
+}
+.exp-position,
+.education-subject,
+.awards-name{
+    font-size:25px;
+}
+.exp-desc,
+.education-desc,
+.awards-desc{
+   font-size:16px;
+   padding-left:5px;
 }
